--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,11 @@
 Changelog
 
+========== Next Version  ==========
+
+Patches and Bug Fixes:
+- Add a .travis.yml file and abp/ino files for CI testing
+- Removes tab from DelayMicroseconds andSubroutineRefBlock generated code
+
 ========== Version 2.1.1 ==========
 
 Patches and Bug Fixes:
