--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,10 @@
 Changelog
 
+========== Version 2.1.1 ==========
+
+Patches and Bug Fixes:
+- Change website URL to point to STFC repository
+
 ========== Version 2.1.0 ==========
 
 Minor Changes:
